# CADAir

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  TODO_INTEGRATION.md  docker-compose.yml  main.py  pyproject.toml
cadair/: __init__.py  cli.py  layout.py  oda.py  service.py  service_schemas.py
config/: cad_glossary_zh-en.json
docs/: TODO.md  WORK_SUMMARY_2026-05-06.md  WORK_SUMMARY_CADAIR_CLI_2026-05-07.md  WORK_SUMMARY_DWG_TRANSLATION_ROUNDTRIP_FIX_2026-05-06.md  WORK_SUMMARY_DXF_NON_ROUNDTRIP_2026-05-06.md  WORK_SUMMARY_GLOSSARY_CONFIG_2026-05-07.md  WORK_SUMMARY_HTTP_SERVICE_V1_2026-05-07.md  WORK_SUMMARY_SERVICE_INTEGRATION_AUDIT_2026-05-07.md  WORK_SUMMARY_SERVICE_PATH_SMOKE_2026-05-08.md  WORK_SUMMARY_SERVICE_PORT_UPDATE_2026-05-08.md  WORK_SUMMARY_TEXT_LAYOUT_SHRINK_2026-05-07.md  WORK_SUMMARY_TRANSLATION_FILTERING_2026-05-06.md
docs/integration/: PYTHON-APP-MAINTENANCE-DIRECTORY-DESIGN.zh-CN.md  (+1 more)
dwg-utils/: check_text_layout.py  dwg2json.py  dwg_to_dxf.py  shrink_text_layout.py  text_reader.py
dwgtranslator/: __init__.py  core.py  extract.py  glossary.py  manager.py  translation_cache.py  translation_filter.py  translator.py  writeback.py
examples/: __init__.py  baidu_async_translate.py  baidu_translate.py  custom_translator.py  extract_only.py  list_engines.py  mock_translate.py  performance_compare.py  quick_start.py  run_all.py  writeback_only.py
tests/: __init__.py  test_baidu_real_api.py  test_baidu_translator.py  test_complete_flow.py  test_service_api.py  test_simple_case_regression.py  test_translation_filter.py
(+19 files in other folders)
