[project]
name = "cadair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "ezdxf>=1.4.3",
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "pytest>=8,<9",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.27,<1",
]

[project.scripts]
cadair = "cadair.cli:main"
